# Perceptual_Recognition_Intelligence_for_Sound_Meaning

./: .gitignore  README.md  pubspec.yaml
.claude/: settings.json
.github/workflows/: ci.yml
.maestro/: smoke.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/prism/audio/: AudioCapturePlugin.kt  AudioCaptureService.kt  ImuCapture.kt  RustBindings.kt
android/app/src/main/kotlin/com/prism/prism/: MainActivity.kt
assets/: anchor_seeds.json
docs/adr/: 0001-vision.md  0002-foreground-service-compliance.md  0003-ffi-architecture.md  0004-phase0-acceptance.md  0005-phase1-acceptance.md  0006-test-strategy.md  0007-phase2-enrollment.md  0008-oppo-a18-hardening.md  0009-phase3-spatial-zones.md
integration_test/: app_boots_test.dart  dsp_event_flow_test.dart  enrollment_flow_test.dart  patrol_permissions_test.dart  scene_pipeline_test.dart  spatial_flow_test.dart
ios/Runner/: AppDelegate.swift  AudioCapture.swift  ImuCapture.swift  Info.plist  Runner-Bridging-Header.h
lib/: main.dart
lib/src/audio/: audio_service.dart  device_profile.dart
lib/src/diag/: startup_profiler.dart
lib/src/enrollment/: caption_generator.dart  categories.dart  enrollment_service.dart  environment_manager.dart  prototype.dart  prototype_repository.dart  prototype_vector_mirror.dart
lib/src/eval/: phase1_eval.dart
lib/src/llm/: embedding_store.dart  gemma_audio.dart  gemma_audio_wav.dart  model_manager.dart  scene_pipeline.dart  scene_verdict.dart
lib/src/perm/: permission_gate.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: audio_stream.dart  dsp_pipeline.dart  enrollment.dart  session.dart  zone.dart
lib/src/spatial/: room_zone.dart  room_zone_repository.dart  zone_enrollment_service.dart
lib/src/ui/: enrollment_record_button.dart  enrollment_wizard.dart  home_screen.dart  prototype_library_screen.dart  spatial_overlay.dart  waveform_painter.dart  zone_enrollment_screen.dart
native/android/: CMakeLists.txt
native/android/src/: stub.cpp
rust/: Cargo.toml  build.rs  flutter_rust_bridge.yaml
rust/src/: frb_generated.rs  lib.rs  ring.rs
rust/src/api/: audio_stream.rs  dsp_pipeline.rs  enrollment.rs  mod.rs  session.rs  zone.rs
rust/src/dsp/: angle_tracker.rs  enrollment.rs  features.rs  fft.rs  mel.rs  mod.rs  onset.rs  spatial.rs  vad.rs  zone.rs
rust/src/ffi/: android.rs  ios.rs  mod.rs
rust/tests/: dsp_smoke.rs  enrollment_tap.rs  pipeline_smoke.rs  ring_concurrent.rs  zone_pipeline.rs
scripts/: build_rust_android.sh  build_rust_ios.sh  codegen.sh  dev.sh  eval_phase1.sh  setup.sh  test.sh
test/: widget_test.dart
test/integration/: env_switch_cross_repo_test.dart
test/src/enrollment/: _fakes.dart  anchor_seeds_test.dart  categories_test.dart  enrollment_service_test.dart  environment_manager_test.dart  prototype_repository_test.dart  prototype_test.dart
test/src/eval/: gate_metrics_test.dart
test/src/llm/: embedding_store_test.dart  scene_verdict_test.dart
test/src/spatial/: room_zone_repository_test.dart  zone_enrollment_service_test.dart
test/src/ui/: prototype_library_screen_test.dart  spatial_overlay_test.dart  waveform_painter_test.dart  zone_enrollment_screen_test.dart
